objects/CommerceDiagnosticCustomObject__c.object
<CustomObject>
    <fields>
        <fullName>B2B_Edition__c</fullName>
        <description>Edition is Lightning (LB2B), CCRZ, or there can be future flavours.</description>
        <label>B2B Edition</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Version__c</fullName>
        <description>Optional: If managed package, then Major, Minor, Patch revision numbers. If Lightning then optional service version.</description>
        <label>B2B Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Browser_Device_Type__c</fullName>
        <description>Code for the Browser and Device Type</description>
        <label>Browser Device Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Context_Id_2__c</fullName>
        <label>Context Id 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Context_Id__c</fullName>
        <label>Context Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Context_Map__c</fullName>
        <label>Context Map</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Correlation_Id__c</fullName>
        <label>Correlation Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_Account_Id__c</fullName>
        <label>Effective Account Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Created_By__c</fullName>
        <label>Event Created By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Created_Date__c</fullName>
        <label>Event Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Retry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Retry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OS_Version__c</fullName>
        <description>Code for operating system and version</description>
        <label>OS Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operation_Stage__c</fullName>
        <label>Operation Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_State__c</fullName>
        <label>Operation State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Status__c</fullName>
        <label>Operation Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Time__c</fullName>
        <label>Operation Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <label>Service Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebStore_Id__c</fullName>
        <label>WebStore Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebStore_Type__c</fullName>
        <description>Type of WebStore, ie. B2B, B2C, OMS</description>
        <label>WebStore Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Commerce Diagnostic Custom Object</label>
    <listViews>
        <fullName>CommerceDiagnosticEventFields</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Context_Id__c</columns>
        <columns>Context_Id_2__c</columns>
        <columns>User__c</columns>
        <columns>Service_Name__c</columns>
        <columns>Operation__c</columns>
        <columns>Operation_Stage__c</columns>
        <columns>Operation_Status__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Operation_Time__c</columns>
        <columns>Operation_State__c</columns>
        <columns>Context_Map__c</columns>
        <filterScope>Everything</filterScope>
        <label>Commerce Diagnostic Event Fields</label>
    </listViews>
    <nameField>
        <label>CommerceDiagnosticCustomObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commerce Diagnostic Custom Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>